--- a/about us.html
+++ b/about us.html
@@ -56,7 +56,7 @@
             <label for="remember-me">Remember Me</label>
             <a href="#">Forgot Password ?</a>
         </div>
-        <input type="submit" value="login now" class="btn">
+        <input type="submit" value="Login now" class="btn">
         <p>Don't have an account <a href="#">Create one!</a></p>
     </form>
 
