--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
      </div>
      <div class="blog">
        <div class="image">
-         <img src="images V2/blog-2.jpg" alt="">
+         <img src="Images V2/blog-2.jpg" alt="">
        </div>
        <div class="content">
          <h3>Why tech support is the key to unlocking efficiency</h3>
