--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
 
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="pricing styles.css">
 
 </head>
 <body>
