--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
          <div class="content">
             <div class="info">
                <h3>Dream Hotel</h3>
-               <p>Osaka, Japan/p>
+               <p>Osaka, Japan</p>
             </div>
             <i class="fas fa-plus"></i>
          </div>
